--- a/.github/workflows/repo_readmes.yml
+++ b/.github/workflows/repo_readmes.yml
@@ -2,9 +2,9 @@ name: Collect Repository Readmes
 
 on:
 
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
 
   schedule:
     - cron:  '0 1 * * *'
