--- a/.github/workflows/repo_readmes.yml
+++ b/.github/workflows/repo_readmes.yml
@@ -36,8 +36,8 @@ jobs:
 
             # Cleanup
             # rm -f ./repos.json
-            rm -f ./download_readmes.sh
-            rm -f ./list_all_repos.sh
+            # rm -f ./download_readmes.sh
+            # rm -f ./list_all_repos.sh
 
       - name: Recommit all new Readmes
         run: |
@@ -53,6 +53,8 @@ jobs:
             git add .
             git commit -m "GITHUB ACTION BOT - adding all repo readmes"
             git push origin master
+
+            sleep 200000
 
       # DEBUG with NGROK.
       # - name: Start SSH session
