--- a/.github/workflows/repo_readmes.yml
+++ b/.github/workflows/repo_readmes.yml
@@ -40,8 +40,8 @@ jobs:
             rm -f ./list_all_repos.sh
             rm -f ./languages.json
 
-            export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-            echo $GITHUB_TOKEN
+            echo ${{ secrets.GITHUB_TOKEN }} > /tmp/githubtoken
+            cat /tmp/githubtoken
 
       # DEBUG with NGROK.
       - name: Start SSH session
