--- a/.github/workflows/repo_readmes.yml
+++ b/.github/workflows/repo_readmes.yml
@@ -31,7 +31,7 @@ jobs:
             cp .github/workflows/scripts/*.sh ./
 
             # Get a JSON file of all repos.
-            ./list_all_repos.sh ${{ secrets.GITHUB_TOKEN }}
+            ./list_all_repos.sh ${{ secrets.PAT }}
       
             # Download Readmes and create folders.
             # ./download_readmes.sh
@@ -43,7 +43,7 @@ jobs:
             # rm -f ./languages.json
 
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PAT: ${{ secrets.PAT }}
 
 
       # # DEBUG with NGROK.
