--- a/.github/workflows/repo_readmes.yml
+++ b/.github/workflows/repo_readmes.yml
@@ -6,8 +6,8 @@ on:
   #   branches:
   #     - master
 
-  schedule:
-    - cron:  '0 1 * * *'
+  # schedule:
+  #   - cron:  '0 1 * * *'
     
   workflow_dispatch:
 
