--- a/.github/workflows/trigger_netlify_build.yml
+++ b/.github/workflows/trigger_netlify_build.yml
@@ -2,10 +2,14 @@ name: Update Netlify
 
 
 on:
+
   # push:
   #   branches:
   #     - master
 
+  schedule:
+   - cron:  '0 1 * * 0'
+    
   workflow_dispatch:
 
 jobs:
